--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     </section>
 
 
-    <!-- Reservation -->
+    <!-- Reservation 
     <section class="reservation">
         <div class="container">
             <div class="reservation-content">
@@ -593,7 +593,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Blog -->
     <section class="blog-section">
