--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <a href="#" class="logo">Kai<span>nan</span></a>
+            <a href="#" class="logo">
+                <img src="assets/images/logo.png" alt="Kainan Logo" class="logo-image">
+                KAI<span>NAN</span>
+            </a>
             
             <div class="location">
                 <i class="bi bi-geo-alt-fill"></i>
@@ -661,7 +664,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info" data-aos="custom-fade-up" data-aos-duration="800">
-                    <a href="#" class="logo">Kai<span>nan</span></a>
+                    <a href="#" class="logo">
+                        <img src="assets/images/logo.png" alt="Kainan Logo" class="logo-image">
+                        KAI<span>NAN</span>
+                    </a>
                     <p class="footer-description">
                         Experience authentic Filipino cuisine with our carefully crafted dishes made from traditional recipes and fresh ingredients.
                     </p>
