--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <a href="#" class="logo">
-                <img src="assets/images/logo.png" alt="Kainan Logo" class="logo-image">
-                KAI<span>NAN</span>
-            </a>
+            <a href="#" class="logo">Kai<span>nan</span></a>
             
             <div class="location">
                 <i class="bi bi-geo-alt-fill"></i>
@@ -664,10 +661,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info" data-aos="custom-fade-up" data-aos-duration="800">
-                    <a href="#" class="logo">
-                        <img src="assets/images/logo.png" alt="Kainan Logo" class="logo-image">
-                        KAI<span>NAN</span>
-                    </a>
+                    <a href="#" class="logo">Kai<span>nan</span></a>
                     <p class="footer-description">
                         Experience authentic Filipino cuisine with our carefully crafted dishes made from traditional recipes and fresh ingredients.
                     </p>
