--- a/index.html
+++ b/index.html
@@ -744,5 +744,6 @@
     <!-- AOS animation library -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
+    <script src="scroll.js"></script>
 </body>
 </html>
